edited css to try stop flickering

--- a/web.css
+++ b/web.css
@@ -2,6 +2,7 @@
 html{
     width: 100%;
     /* height: 100%; */
+    backface-visibility: hidden;
 }
 header{
     background-size: cover;
@@ -37,7 +38,7 @@ body{
     /* background: rgb(2,0,36); */
     /* background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%); */
     background-image:linear-gradient(-45deg,#9c11e1,#f27b31);
-    background-size:400%,400%;
+    background-size:100%,100%;
     /* height: 100vh; */
     /* -webkit-animation: animate 10s ease infinite ;
     -moz-animation: animate 10s ease infinite ; */
